# BandPilot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  udpreceiver.cpp  udpreceiver.h
